16_subseq/grade.txt
Grading at Mon Jun  8 07:14:24 UTC 2020
Attempting to compile maxSeq.c 
maxSeq.c: In function ‘maxSeq’:
maxSeq.c:9:3: error: expected ‘,’ or ‘;’ before ‘if’
   if(n==0)
   ^
The code did not compile!

Overall Grade: F
